manifests/dashy/dashy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashy
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: dashy 
  template:
    metadata:
      labels:
        app: dashy
    spec:
      containers:
      - name: dashy-contianer
        image: lissy93/dashy:latest 
        ports:
        - containerPort: 8080 
        volumeMounts:
        - name: config-volume 
          mountPath: /app/user-data/conf.yml 
          subPath: conf.yml 
      volumes:
      - name: config-volume 
        configMap:
          name: dashy-page-config

---
apiVersion: v1
kind: Service
metadata:
  name: dashy-service
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8080 
    targetPort: 8080 
  selector:
    app: dashy
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashy-ingress
  namespace: dashy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-cloudflare
    traefik.ingress.kube  rnetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - seanchoo.top
    secretName: dashy-tls
  rules:
  - host: seanchoo.top
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashy-service
            port:
              number: 8080
